k8s/deployment-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: techchallenge-deployment
spec:
  replicas: 1  # número inicial de réplicas
  selector:
    matchLabels:
      app: techchallenge
  template:
    metadata:
      labels:
        app: techchallenge
    spec:
      containers:
        - name: techchallenge-container
          image: tech-challenge/tech-challenge:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5000
