k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: techchallenge-service
spec:
  type: LoadBalancer  # pode ser LoadBalancer ou NodePort
  selector:
    app: techchallenge
  ports:
    - port: 80       # porta interna do cluster
      targetPort: 5000 # porta do container
